Adjust error raising

--- a/notebooks/file_to_json_llm.ipynb
+++ b/notebooks/file_to_json_llm.ipynb
@@ -889,11 +889,9 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2025-07-21T17:56:16.252600Z"
+     "end_time": "2025-07-21T17:57:26.631126Z",
+     "start_time": "2025-07-21T17:57:17.130301Z"
     }
    },
    "cell_type": "code",
@@ -947,13 +945,62 @@
     "    hpo_terms = Phenopacket(json.loads(hpo_json_array))\n",
     "    print(f\"Parsed {len(hpo_terms)} HPO term(s) for patient {patient_id}\")\n",
     "except JSONDecodeError as error:\n",
-    "    raise ValueError(f\"Failed to parse HPO JSON array {hpo_json_array} for patient {patient_id}: {e}\\nRaw output:\\n{raw_hpo_output}\")\n",
+    "    raise ValueError(\n",
+    "        f\"Failed to parse HPO JSON array for patient {patient_id}: {error}\\n\\n\"\n",
+    "        f\"Extracted JSON was:\\n{hpo_json_array}\\n\\n\"\n",
+    "        f\"Full raw output was:\\n{raw_hpo_output}\"\n",
+    "    )\n",
     "\n",
     "print(\"hello5\")  # print hello 5 as a sanity check"
    ],
    "id": "1f547b47f98fc0b3",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw LLM output (truncated to the first ~300 chars or so):\n",
+      "This is a review article discussing paroxysmal nocturnal hemoglobinuria (PNH), a rare blood disorder caused by mutations in the PIGA gene, which is involved in the synthesis of glycosylphosphatidylinositol (GPI) anchors on proteins.\n",
+      "\n",
+      "The authors discuss various aspects of PNH, including its pathophy ...\n",
+      "\n",
+      "===== RAW HPO OUTPUT =====\n",
+      " This is a review article discussing paroxysmal nocturnal hemoglobinuria (PNH), a rare blood disorder caused by mutations in the PIGA gene, which is involved in the synthesis of glycosylphosphatidylinositol (GPI) anchors on proteins.\n",
+      "\n",
+      "The authors discuss various aspects of PNH, including its pathophysiology, clinical presentation, and diagnosis. They also review the genetic basis of PNH, highlighting the importance of the PIGA gene in GPI anchor synthesis and the consequences of mutations in this gene on protein anchoring and cell surface protein function.\n",
+      "\n",
+      "Some key points from the article include:\n",
+      "\n",
+      "* PNH is caused by a deficiency in GPI-anchored proteins due to mutations in the PIGA gene.\n",
+      "* The PIGA gene plays a critical role in the synthesis of GPI anchors, which are essential for attaching proteins to the cell membrane.\n",
+      "* Mutations in the PIGA gene can lead to a range of downstream effects, including impaired protein anchoring and altered cell surface protein function.\n",
+      "* The authors discuss various clinical manifestations of PNH, including hemolytic anemia, thrombosis, and autoimmune disorders.\n",
+      "* They also review diagnostic approaches for PNH, highlighting the importance of genetic testing in identifying individuals with this disorder.\n",
+      "\n",
+      "The article concludes by discussing therapeutic options for PNH, including eculizumab (a complement inhibitor) and ravulizumab (another complement inhibitor).\n",
+      "\n",
+      "Some potential future directions for research mentioned in the article include:\n",
+      "\n",
+      "* Investigating the role of other GPI anchor enzymes in PNH\n",
+      "* Developing new diagnostic tests for PNH\n",
+      "* Exploring alternative treatments for PNH, such as gene therapy or immunotherapy\n",
+      "\n",
+      "Overall, this review article provides a comprehensive overview of paroxysmal nocturnal hemoglobinuria, its pathophysiology, and its clinical presentation. It also highlights the importance of genetic testing in diagnosing and managing this disorder.\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Could not locate a JSON array in HPO output for patient IV-4:\nThis is a review article discussing paroxysmal nocturnal hemoglobinuria (PNH), a rare blood disorder caused by mutations in the PIGA gene, which is involved in the synthesis of glycosylphosphatidylinositol (GPI) anchors on proteins.\n\nThe authors discuss various aspects of PNH, including its pathophysiology, clinical presentation, and diagnosis. They also review the genetic basis of PNH, highlighting the importance of the PIGA gene in GPI anchor synthesis and the consequences of mutations in this gene on protein anchoring and cell surface protein function.\n\nSome key points from the article include:\n\n* PNH is caused by a deficiency in GPI-anchored proteins due to mutations in the PIGA gene.\n* The PIGA gene plays a critical role in the synthesis of GPI anchors, which are essential for attaching proteins to the cell membrane.\n* Mutations in the PIGA gene can lead to a range of downstream effects, including impaired protein anchoring and altered cell surface protein function.\n* The authors discuss various clinical manifestations of PNH, including hemolytic anemia, thrombosis, and autoimmune disorders.\n* They also review diagnostic approaches for PNH, highlighting the importance of genetic testing in identifying individuals with this disorder.\n\nThe article concludes by discussing therapeutic options for PNH, including eculizumab (a complement inhibitor) and ravulizumab (another complement inhibitor).\n\nSome potential future directions for research mentioned in the article include:\n\n* Investigating the role of other GPI anchor enzymes in PNH\n* Developing new diagnostic tests for PNH\n* Exploring alternative treatments for PNH, such as gene therapy or immunotherapy\n\nOverall, this review article provides a comprehensive overview of paroxysmal nocturnal hemoglobinuria, its pathophysiology, and its clinical presentation. It also highlights the importance of genetic testing in diagnosing and managing this disorder.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mRuntimeError\u001B[39m                              Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[116]\u001B[39m\u001B[32m, line 41\u001B[39m\n\u001B[32m     38\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m start < \u001B[32m0\u001B[39m \u001B[38;5;129;01mor\u001B[39;00m end < \u001B[32m0\u001B[39m:\n\u001B[32m     39\u001B[39m     \u001B[38;5;66;03m# print the raw output to debug what the model actually sent\u001B[39;00m\n\u001B[32m     40\u001B[39m     \u001B[38;5;28mprint\u001B[39m(\u001B[33m\"\u001B[39m\u001B[33m===== RAW HPO OUTPUT =====\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[33m\"\u001B[39m, raw_hpo_output)\n\u001B[32m---> \u001B[39m\u001B[32m41\u001B[39m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mRuntimeError\u001B[39;00m(\u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mCould not locate a JSON array in HPO output for patient \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mpatient_id\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m:\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;132;01m{\u001B[39;00mraw_hpo_output\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m\"\u001B[39m)\n\u001B[32m     42\u001B[39m \u001B[38;5;66;03m# grab *only* the array text\u001B[39;00m\n\u001B[32m     43\u001B[39m hpo_json_array = raw_hpo_output[start : end+\u001B[32m1\u001B[39m]\n",
+      "\u001B[31mRuntimeError\u001B[39m: Could not locate a JSON array in HPO output for patient IV-4:\nThis is a review article discussing paroxysmal nocturnal hemoglobinuria (PNH), a rare blood disorder caused by mutations in the PIGA gene, which is involved in the synthesis of glycosylphosphatidylinositol (GPI) anchors on proteins.\n\nThe authors discuss various aspects of PNH, including its pathophysiology, clinical presentation, and diagnosis. They also review the genetic basis of PNH, highlighting the importance of the PIGA gene in GPI anchor synthesis and the consequences of mutations in this gene on protein anchoring and cell surface protein function.\n\nSome key points from the article include:\n\n* PNH is caused by a deficiency in GPI-anchored proteins due to mutations in the PIGA gene.\n* The PIGA gene plays a critical role in the synthesis of GPI anchors, which are essential for attaching proteins to the cell membrane.\n* Mutations in the PIGA gene can lead to a range of downstream effects, including impaired protein anchoring and altered cell surface protein function.\n* The authors discuss various clinical manifestations of PNH, including hemolytic anemia, thrombosis, and autoimmune disorders.\n* They also review diagnostic approaches for PNH, highlighting the importance of genetic testing in identifying individuals with this disorder.\n\nThe article concludes by discussing therapeutic options for PNH, including eculizumab (a complement inhibitor) and ravulizumab (another complement inhibitor).\n\nSome potential future directions for research mentioned in the article include:\n\n* Investigating the role of other GPI anchor enzymes in PNH\n* Developing new diagnostic tests for PNH\n* Exploring alternative treatments for PNH, such as gene therapy or immunotherapy\n\nOverall, this review article provides a comprehensive overview of paroxysmal nocturnal hemoglobinuria, its pathophysiology, and its clinical presentation. It also highlights the importance of genetic testing in diagnosing and managing this disorder."
+     ]
+    }
+   ],
+   "execution_count": 116
   },
   {
    "metadata": {},
